# KiwiOS

./: .depend  .gitignore  .gitmodules  CMakeLists.txt  Makefile  Makefile.in  README.md  configure  configure.ac  kernel.map  kiwios-kernel  test  test.c  test.h  wscript
arch/x86_64/: loader.S
boot/grub/: grub.cfg
include/: assert.h  config.h  config.h.in  ctype.h  gdt.h  heap.h  idt.h  keymaps.h  list.h  math.h  pmm.h  stdarg.h  stddef.h  stdint.h  stdio.h  stdlib.h  string.h  vga.h  vmm.h
include/bits/: wordsize.h
include/gnu/: multiboot.h
include/keymaps/: en_US.h  fr_FR.h
include/sys/: io.h  krnl.h  lfb.h
include/utils/: panic.h
src/: entry.rs  kernel.ld  linker.ld
src/boot/: boot.s
src/io/: mod.rs
src/lib/: assert.c  assert.d  crypt.d  ctype.c  ctype.d  list.c  list.d  math.c  math.d  stdio.c  stdio.d  stdlib.c  stdlib.d  string.c  string.d  vga.c  vga.d
src/sys/krnl/: gdt.c  gdt.d  idt.c  idt.d  idt_s.s  krnl.c  krnl.d  start.c  start.d
src/sys/mm/: heap.c  heap.d  pmm.c  pmm.d  vmm.c  vmm.d
src/sys/utils/: panic.c  panic.d
src/sys/video/: lfb.c
